templates/release/istio/cartservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cartservice
spec:
  hosts:
  - cartservice
  http:
  - route:
    - destination:
        host: cartservice
        subset: v1
