templates/release/istio/currencyservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: currencyservice
spec:
  hosts:
  - currencyservice
  http:
  - route:
    - destination:
        host: currencyservice
        subset: v1
