templates/release/istio/emailservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emailservice
spec:
  hosts:
  - emailservice
  http:
  - route:
    - destination:
        host: emailservice
        subset: v1
