templates/release/istio/paymentservice-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: paymentservice
spec:
  host: paymentservice
  subsets:
  - name: v1
    labels:
      version: v1
