templates/release/istio/paymentservice-fault-vs-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: paymentservice
spec:
  hosts:
  - paymentservice
  http:
  - route:
    - destination:
        host: paymentservice
        subset: v1
    fault:
      delay:
        fixedDelay: 120s
        percentage:
          value: 100
