templates/release/istio/productcatalogservice-fault-vs-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
  - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
    fault:
      abort:
        httpStatus: 500
        percentage:
          value: 30
