templates/release/istio/shippingservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shippingservice
spec:
  hosts:
  - shippingservice
  http:
  - route:
    - destination:
        host: shippingservice
        subset: v3
